tests/dataset/tpc-ds/compiler/pl/q23.error
run: exit status 2
0
ERROR: /tmp/q23.pl:64: user:main Unknown message: error('expect failed')
